--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <link rel="canonical" href="https://bodyfatcalculator.xyz" />
   </head>
   <body>
+    <script async="async" data-cfasync="false" src="//pl28033258.effectivegatecpm.com/3af12ae0e989ec5b7f84b8a6fd929cea/invoke.js"></script>
+<div id="container-3af12ae0e989ec5b7f84b8a6fd929cea"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script async="async" data-cfasync="false" src="//pl28033258.effectivegatecpm.com/3af12ae0e989ec5b7f84b8a6fd929cea/invoke.js"></script>
+<div id="container-3af12ae0e989ec5b7f84b8a6fd929cea"></div>
   </body>
 </html>
