--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <script type="module" src="/src/main.tsx"></script>
     <script async="async" data-cfasync="false" src="//pl28033258.effectivegatecpm.com/3af12ae0e989ec5b7f84b8a6fd929cea/invoke.js"></script>
 <div id="container-3af12ae0e989ec5b7f84b8a6fd929cea"></div>
+    <script src="https://pl28033322.effectivegatecpm.com/80/a7/de/80a7de6a81657f2d2011489c1352740c.js"></script>
   </body>
 </html>
